--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jshint": "*",
     "escope": "1.0.0",
     "mkdirp": "~0.3.5",
-    "superagent": "~0.15.4"
+    "superagent": "~0.15.4",
+    "file": "~0.2.1",
+    "batch": "~0.5.0"
   },
   "devDependencies": {
     "vows": "~0.7.0",
